<resources>
    <string name="app_name">Kalavara Foods</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_about">About</string>
    <string name="hotlist">hotlist</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <string-array name="loading">
        <item>Loading.....Please wait...</item>
    </string-array>

    <string name="manage_account"> Manage Account</string>
    <string name="change_password"> Change Password</string>
    <string name="add_address">Add Address</string>
    <string name="manage_address"> Manage Address </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello userOrder fragment</string>
    <string name="text_clear_cart_all">clear cart</string>
    <string name="facebook_app_id">216208765794394</string>
    <string name="fb_login_protocol_scheme">fb216208765794394</string>
    <string name="policy_info">By signing up, you agree to Kalavara Foods\'s <u>Terms and Conditions</u>, and <u>Privacy Policy</u></string>
    <string name="edit_address">Edit Address</string>
    <string name="failed_to_fetch_data">Failed to fetch data!</string>
    <string name="coming_soon">Coming soon!!!</string>
    <string name="your_wallet_amount">Your Wallet Amount :</string>

    <string name="google_maps_api_key"> AIzaSyC9NNSwVwFVr4leiz8Km7WR1Sh4ft3FGB8 </string>
    <string name="account_string">Account</string>
    <string name="kalavara_foods">Kalavara Foods</string>
    <string name="metromartraycast_gmail_com">metromartraycast@gmail.com</string>
    <string name="select_location">Select Location</string>
    <string name="places">Places</string>
    <string name="change_phone_number">Change Phone Number</string>
    <string name="place_colon">Place:</string>
    <string name="place_value">place value</string>
    <string name="cancel">cancel</string>
    <string name="update">update</string>
    <string name="mobile_no">Mobile no</string>
    <string name="enter_a_valid_mobile_number">Enter a valid mobile number</string>
    <string name="get_otp">get otp</string>
    <string name="mobile">Mobile</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="enter_the_otp_that_been_sent_to_your_number">Enter the OTP that been sent to your number</string>
    <string name="save">save</string>
    <string name="password">Password</string>
    <string name="password_confirm">Password Confirm</string>
    <string name="phone_no">Phone No</string>
    <string name="home">Home</string>
    <string name="notification">Notification</string>
    <string name="orders">Orders</string>
    <string name="cart">Cart</string>
    <string name="login">Login</string>
    <string name="admin">Admin</string>
    <string name="wallet">Wallet</string>
    <string name="contact_us">Contact Us</string>
    <string name="rate_us">Rate Us</string>
    <string name="logout">Logout</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="show_password">Show Password</string>
    <string name="new_number">New Number</string>
    <string name="verify">Verify</string>
    <string name="please_enter_your_registered_mobile_no">Please enter your registered Mobile no</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="please_enter_the_otp_sent_to_your_mobile_no">Please enter the OTP sent to your Mobile No</string>
    <string name="otp">OTP</string>

</resources>
