<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item android:id="@+id/navig_home"
        android:title="@string/home"
        android:icon="@drawable/ic_home_black_24dp"/>

    <item android:id="@+id/navig_admin"
        android:title="@string/admin"
        android:visible="false"
        android:icon="@drawable/baseline_how_to_reg_black_24dp"/>

    <item android:id="@+id/navig_login"
        android:title="@string/login"
        android:icon="@drawable/ic_person_black_24dp"/>

    <item android:id="@+id/navig_cart"
        android:title="@string/cart"
        android:icon="@drawable/ic_shopping_cart_black_24dp"/>

    <item android:id="@+id/navig_notification"
        android:title="@string/notification"
        android:icon="@drawable/ic_notifications_black_24dp"/>

    <item android:id="@+id/navig_orders"
        android:title="@string/orders"
        android:icon="@drawable/ic_check_circle_black_24dp"/>

    <item android:id="@+id/navig_wallet"
        android:title="@string/wallet"
        android:icon="@drawable/ic_account_balance_wallet_black_24dp"/>

    <item android:id="@+id/navig_contactUs"
        android:title="@string/contact_us"
        android:icon="@drawable/ic_call_black_24dp"/>

    <item android:id="@+id/navig_rateUs"
        android:title="@string/rate_us"
        android:icon="@drawable/ic_thumb_up_black_24dp"/>

    <item android:id="@+id/navig_logout"
        android:title="@string/logout"
        android:icon="@drawable/ic_person_black_24dp"/>

</menu>