<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:weightSum="8">

    <include layout="@layout/layout_app_bar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/tvOldNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:ems="10"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"
                android:textSize="14sp"
                android:hint="@string/old_password"/>

            <EditText
                android:id="@+id/etNewNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:ems="10"
                android:textSize="14sp"
                android:hint="@string/new_number"
                android:inputType="phone" />

            <Button
                android:id="@+id/btnUpdate"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/button_bg_red"
                android:gravity="center"
                android:layout_marginTop="56dp"
                android:textAllCaps="true"
                android:text="@string/update"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>