<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg">

    <include layout="@layout/layout_app_bar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        android:layout_marginBottom="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <LinearLayout
                android:id="@+id/lladresslist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingRight="@dimen/activity_horizontal_margin">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <TextView
                        android:id="@+id/addr_address_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Address"
                        android:textColor="#000000" />

                    <EditText
                        android:id="@+id/etAddress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="120dp"
                        android:gravity="start"
                        android:layout_marginBottom="5dp"
                        android:ems="10"
                        android:inputType="textPostalAddress" />

                    <TextView
                        android:id="@+id/addr_landmark_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="Landmark"
                        android:textColor="#000000" />

                    <EditText
                        android:id="@+id/etLandmark"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp" />


                    <TextView
                        android:id="@+id/addr_places_text"
                        android:layout_width="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_height="wrap_content"
                        android:text="@string/places"
                        android:textColor="#000000" />

                    <TextView
                        android:id="@+id/tvPlaces"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:textSize="16dp"
                        android:gravity="center_vertical"
                        android:paddingStart="16dp"
                        android:paddingEnd="16dp"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white"
                        android:hint="@string/select_location"
                        android:background="@color/colorPrimary"
                        android:layout_marginBottom="5dp" />


                    <TextView
                        android:id="@+id/addr_pincode_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="Pincode"
                        android:textColor="#000000" />

                    <EditText
                        android:id="@+id/etPinCode"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:ems="10"
                        android:inputType="number" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_below="@+id/lladresslist"
                android:layout_alignParentBottom="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="5dp"
                android:gravity="bottom"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin">

                <Button
                    android:id="@+id/btnAddressCancel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_bg_red"
                    android:gravity="center"
                    android:text="@string/cancel"
                    android:textAllCaps="true"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btnAddressSave"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_bg_red"
                    android:gravity="center"
                    android:text="@string/save"
                    android:textAllCaps="true"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold" />

            </LinearLayout>

        </RelativeLayout>

    </ScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>


